--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- start header  -->
     <header>
-        <nav class="container">
+        <!-- <nav class="container">
             <nav class="navbar navbar-expand-lg py-3 ">
                 <div class="container-fluid row">
                     <div class="col-md-6 col-sm-12">
@@ -44,7 +44,41 @@
                     </div>
                 </div>
             </nav>
+        </nav> -->
+
+        <nav class="navbar navbar-expand-lg py-4">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <div class="row me-0">
+                    <button class="navbar-toggler col-md-12 " type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <img class="img-fluid " src="icons/menu-2 1.svg" alt="">
+                    </button>
+                    <div class="collapse navbar-collapse col-md-12 col-sm-12 justify-content-end" id="navbarNav">
+                        <ul class="navbar-nav ">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link ">Subscribe</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
         </nav>
+
+
+
+
     </header>
     <!-- first section  -->
     <section class="">
