--- a/index.html
+++ b/index.html
@@ -15,37 +15,6 @@
 <body>
     <!-- start header  -->
     <header>
-        <!-- <nav class="container">
-            <nav class="navbar navbar-expand-lg py-3 ">
-                <div class="container-fluid row">
-                    <div class="col-md-6 col-sm-12">
-                        <a class="navbar-brand fs-1" href="#">Convention Center</a>
-                    </div>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse col-md-6 justify-content-end" id="navbarNavDropdown">
-                        <ul class="navbar-nav ">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Subscribe</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </nav> -->
-
         <nav class="navbar navbar-expand-lg py-4">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Navbar</a>
@@ -75,9 +44,6 @@
 
             </div>
         </nav>
-
-
-
 
     </header>
     <!-- first section  -->
@@ -161,7 +127,7 @@
         <div class="row text-center py-5">
             <h1>Our package</h1>
         </div>
-        <div class="row">
+        <div class="row gy-3">
             <div class="col-sm-12 col-md-6 col-lg-3 text-start card-div">
                 <div class="card">
                     <button class="btn buying">
